samples/_failures_safe/1761316184_f58bf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a6051cd.c: In function ‘print_instructions’:
./samples/SAFE/__tmp_7a6051cd.c:178:12: error: missing terminating " character
  178 |     printf("Available commands: start,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7a6051cd.c:178:5: error: expected expression at end of input
  178 |     printf("Available commands: start,
      |     ^~~~~~
./samples/SAFE/__tmp_7a6051cd.c:178:5: error: expected declaration or statement at end of input
